fix(volunteer) - spark api timeout fix(volunteer) - tags click on firefox fix(volunteer) - uncheck tag filter removes department filter

--- a/src/common.scss
+++ b/src/common.scss
@@ -11,7 +11,7 @@ body {
   background-color: #f1f1f5;
   border-radius: 10px;
   box-shadow: 0px 0px 6px 2px rgba(255, 255, 255, 0.55);
-  margin: 20px;
+  margin-top: 20px;
 }
 
 .modal-dialog {
